--- a/kafka/pom.xml
+++ b/kafka/pom.xml
@@ -10,6 +10,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>kafka</artifactId>
+    <packaging>pom</packaging>
+    <modules>
+        <module>kafka-model</module>
+        <module>kafka-admin</module>
+        <module>kafka-producer</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>14</maven.compiler.source>
